crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__run__tests__back_links_snapshot_with_test_plan.snap
---
source: crates/rtf-orchestrator-ui/src/templates/run.rs
expression: render_fragment!(running_run().as_back_links())
---

<p><a href="/ui">&larr; Find another run</a></p>

<p><a href="/ui/test-plan/00000000-0000-0000-0000-000000000002">&larr; Back to test plan</a></p>
