crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__run__tests__back_links_snapshot_without_test_plan.snap
---
source: crates/rtf-orchestrator-ui/src/templates/run.rs
expression: render_fragment!(terminal_run_without_test_plan().as_back_links())
---

<p><a href="/ui">&larr; Find another run</a></p>
